--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.88.0"
+		"@supabase/supabase-js": "^2.88.0",
+		"mysql2": "^3.17.4"
 	}
 }
